Added Comments with SignalR Added Edit to Answer Added Topics, Likes Added auto-complete for Tags and AllowedUsers in Template Deleted Partials Replaced Form on Template, FormAnswer on Form
Fixed behavior when edit Question type in Template which have Forms, now delete old and create new Answer entity in Db

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CourseProject.ViewModels
+@using CourseProject.ViewModels.Account
 @using Microsoft.Extensions.Localization
 @model LoginViewModel
 @inject IStringLocalizer<SharedResources> localizer
