--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -106,7 +106,7 @@
                         }
                         <form method="post" asp-action="DeleteUser" asp-route-userId="@user.UserId">
                             <button type="submit" class="btn btn-danger">
-                                @localizer["Delete"]
+                                @localizer["DeleteUser"]
                             </button>
                         </form>
                     </td>
