--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CourseProject.ViewModels
+@using CourseProject.ViewModels.Account
 @using Microsoft.Extensions.Localization
 @model RegisterViewModel
 @inject IStringLocalizer<SharedResources> localizer
