--- a/Views/Form/ViewAnswer.cshtml
+++ b/Views/Form/ViewAnswer.cshtml
@@ -27,6 +27,7 @@
             <div class="list-group-item">
                 <div class="mb-2">
                     <label class="form-label fw-bold">@pair.Question.Title</label>
+                    <p class="fst-italic">@pair.Question.Description</p>
                 </div>
                 <div>
                     @switch (pair.Answer)
