--- a/Views/Template/Statistics.cshtml
+++ b/Views/Template/Statistics.cshtml
@@ -13,6 +13,7 @@
                     <div class="list-group-item">
                         <div class="mb-2">
                             <label class="form-label fw-bold">@stat.QuestionTitle</label>
+                            <p class="fst-italic">@stat.QuestionDescription</p>
                         </div>
                         <div>
                             @if (stat.QuestionType == QuestionType.Integer)
